--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ meta: One of the leading laboratories of the worldwide network of Fab Labs
 
 </section> <!-- hero -->
 
-{% include eu_projects.html %}
+{% include projects.html %}
 
 <div class="container">
   <div id="separator"></div>
