--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ meta: One of the leading laboratories of the worldwide network of Fab Labs
           <a target="_blank" href="https://t.me/kpi_lampa"><i class="fa fa-telegram"></i></a>&nbsp;&nbsp;&nbsp;
 	  <a target="_blank" href="https://www.youtube.com/user/kpikeoa"><i class="fa fa-youtube fa"></i></a>&nbsp;&nbsp;&nbsp;
 	  <a target="_blank" href="https://www.instagram.com/lampa.lab/"><i class="fa fa-instagram fa"></i></a>&nbsp;&nbsp;&nbsp;
-	  <a target="_blank" href="https://www.google.com/maps/place/Lampa/@50.4494426,30.4566886,19.33z/data=!4m12!1m6!3m5!1s0x40d4ce82b9d930e5:0x8b1e1e0c5175e2f!2z0JrQn9CGINGW0LwuINCG0LPQvtGA0Y8g0KHRltC60L7RgNGB0YzQutC-0LPQviwg0LrQvtGA0L_Rg9GBIOKEljE!8m2!3d50.449512!4d30.4608136!3m4!1s0x0:0x4b57b04de630975!8m2!3d50.4497332!4d30.4565191"><i class="fa fa-globe fa"></i></a>
+	  <a target="_blank" href="https://github.com/LampaLab"><i class="fa fa-github fa"></i></a>
         </li>
       </div> <!-- carousel-caption -->
 
