--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ meta: One of the leading laboratories of the worldwide network of Fab Labs
 
 
       <div class="carousel-caption">
-        <img id="main-logo" src="{{site.baseurl}}/img/logos/logo_fablab_bcn_medium_color.png"/>
+        <img id="main-logo" src="{{site.baseurl}}/img/logos/big_logo.png"/>
         <br><br>
         <p>One of the leading laboratories of the worldwide network of Fab Labs</p>	
         <br>
