--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ meta: One of the leading laboratories of the worldwide network of Fab Labs
       <div class="carousel-caption">
         <img id="main-logo" src="{{site.baseurl}}/img/logos/big_logo.png"/>
         <br><br>
-        <p>One of the leading laboratories of the worldwide network of Fab Labs</p>	
+        <p>Відкрита лабораторія електроніки</p>	
         <br>
         <li>          
 	  <a target="_blank" href="https://www.facebook.com/lampa.kpi/"><i class="fa fa-facebook-square fa"></i></a>&nbsp;&nbsp;&nbsp;
