--- a/index.html
+++ b/index.html
@@ -33,6 +33,41 @@ meta: One of the leading laboratories of the worldwide network of Fab Labs
           <div class="carousel-caption"></div>
         </div> <!-- item -->
 
+        <div class="item">
+          <img id="slider-img" src="{{site.baseurl}}/img/hero_slider/a_slider_4.jpg" alt="...">
+          <div class="carousel-caption"></div>
+        </div> <!-- item -->
+
+        <div id="slider-img"  class="item">
+          <img src="{{site.baseurl}}/img/hero_slider/a_slider_5.jpg" alt="...">
+          <div class="carousel-caption"></div>
+        </div> <!-- item -->
+
+        <div class="item">
+          <img id="slider-img" src="{{site.baseurl}}/img/hero_slider/a_slider_6.jpg" alt="...">
+          <div class="carousel-caption"></div>
+        </div> <!-- item -->
+
+        <div id="slider-img"  class="item">
+          <img src="{{site.baseurl}}/img/hero_slider/a_slider_7.jpg" alt="...">
+          <div class="carousel-caption"></div>
+        </div> <!-- item -->
+
+        <div class="item">
+          <img id="slider-img" src="{{site.baseurl}}/img/hero_slider/a_slider_8.jpg" alt="...">
+          <div class="carousel-caption"></div>
+        </div> <!-- item -->
+
+        <div id="slider-img"  class="item">
+          <img src="{{site.baseurl}}/img/hero_slider/a_slider_9.jpg" alt="...">
+          <div class="carousel-caption"></div>
+        </div> <!-- item -->
+ 
+        <div id="slider-img"  class="item">
+          <img src="{{site.baseurl}}/img/hero_slider/a_slider_10.jpg" alt="...">
+          <div class="carousel-caption"></div>
+        </div> <!-- item -->
+
       <div class="carousel-caption">
         <img id="main-logo" src="{{site.baseurl}}/img/logos/big_logo.png"/>
         <br><br>
