--- a/index.html
+++ b/index.html
@@ -63,7 +63,4 @@ meta: One of the leading laboratories of the worldwide network of Fab Labs
 
 {% include projects.html %}
 
-<div class="container">
-  <div id="separator"></div>
-</div>
-
+{% include footer.html %}
