--- a/index.html
+++ b/index.html
@@ -61,6 +61,36 @@ meta: One of the leading laboratories of the worldwide network of Fab Labs
 
 </section> <!-- hero -->
 
+ <div class="row" id="map-info">
+
+      <div class="col-md-6" id="map-container" >
+        <iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=%D0%BA%D0%BF%D1%96%20lampa&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+      </div> <!-- col -->
+
+      <div class="col-md-1"></div>
+
+      <div class="col-md-5" id="contact-col-txt-2">
+        <h3>Адреса</h3><br>
+        <p>03056б м.Київ, проспект Перемоги 37</p><br>
+        <p>Науково-технічна бібілотека КПІ, зал №1</p><br>
+        <h3>Розклад роботи</h3><br>
+        <p>Пн-пт: з 16-30 до 20-00</p><br>
+        <p>Сб: з 12-00 до 17-00</p><br>
+        <p>Нд: вихідний</p><br>
+        <h3>Контакти</h3><br>
+        <p>E-mail: e.korotkiy@kpi.ua</p><br>
+        <p>Тел 1: +3-8-067-695-2004 (Короткий Євген, засновник)</p><br>
+        <p>Тел 1: +3-8-098-891-6340 (Федоренко Сергій, лаборант)</p><br>
+        <p>Тел 1: +3-8-098-765-1781 (Гордієнко Ярослав, лаборант)</p><br>
+        <p>Тел 1: +3-8-098-334-4299 (Шут Олеся, лаборант)</p><br>
+        <p>За наведеними номерами можливий контакт в Telegram</p><br>
+      </div> <!-- col -->
+
+    </div> <!-- row -->
+
+  </div>
+</section> <!--contact-->
+
 {% include projects.html %}
 
 {% include footer.html %}
