--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ meta: One of the leading laboratories of the worldwide network of Fab Labs
  <div class="row" id="map-info">
 
       <div class="col-md-6" id="map-container" >
-        <iframe width="300" height="300" frameborder="0" style="border:0" src="https://maps.google.com/maps?q=%D0%BA%D0%BF%D1%96%20lampa&t=&z=13&ie=UTF8&iwloc=&output=embed" allowfullscreen></iframe>
+        <iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=%D0%BA%D0%BF%D1%96%20lampa&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
       </div> <!-- col -->
 
       <div class="col-md-1"></div>
@@ -73,11 +73,11 @@ meta: One of the leading laboratories of the worldwide network of Fab Labs
         <h3>Адреса</h3><br>
         <p>03056б м.Київ, проспект Перемоги 37</p>
         <p>Науково-технічна бібілотека КПІ, зал №1</p>
-        <h3>Розклад роботи</h3>
+        <h3>Розклад роботи</h3><br>
         <p>Пн-пт: з 16-30 до 20-00</p>
         <p>Сб: з 12-00 до 17-00</p>
         <p>Нд: вихідний</p>
-        <h3>Контакти</h3>
+        <h3>Контакти</h3><br>
         <p>E-mail: e.korotkiy@kpi.ua</p>
         <p>Тел 1: +3-8-067-695-2004 (Короткий Євген)</p>
         <p>Тел 2: +3-8-098-891-6340 (Федоренко Сергій)</p>
