--- a/index.html
+++ b/index.html
@@ -64,14 +64,15 @@ meta: One of the leading laboratories of the worldwide network of Fab Labs
  <div class="row" id="map-info">
 
       <div class="col-md-6" id="map-container" >
-        <iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=%D0%BA%D0%BF%D1%96%20lampa&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+        <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=C%2FPujades%20102%20baixos.%20%20Poble%20Nou%2C%20Barcelona%2008005%20Espa%C3%B1a&key=AIzaSyDUrjldaeC0nEPREGJzBMuKfTUuC6XUJWY" allowfullscreen></iframe>
+        </iframe>
       </div> <!-- col -->
 
       <div class="col-md-1"></div>
 
       <div class="col-md-5" id="contact-col-txt-2">
         <h3>Адреса</h3><br>
-        <p>03056б м.Київ, проспект Перемоги 37</p>
+        <p>03056, м.Київ, проспект Перемоги 37</p>
         <p>Науково-технічна бібілотека КПІ, зал №1</p>
         <h3>Розклад роботи</h3><br>
         <p>Пн-пт: з 16-30 до 20-00</p>
