--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ meta: One of the leading laboratories of the worldwide network of Fab Labs
  <div class="row" id="map-info">
 
       <div class="col-md-6" id="map-container" >
-        <iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=%D0%BA%D0%BF%D1%96%20lampa&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d981.1130044637364!2d30.456758630419365!3d50.44974981823893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4b57b04de630975!2sLampa!5e0!3m2!1sen!2sua!4v1545743026349" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div> <!-- col -->
 
       <div class="col-md-1"></div>
