--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ meta: One of the leading laboratories of the worldwide network of Fab Labs
         <p>Сб: з 12-00 до 17-00</p>
         <p>Нд: вихідний</p>
         <h3>Контакти</h3><br>
-        <p>E-mail: e.korotkiy@kpi.ua</p>
+        <p>E-mail: <a href="e.korotkiy@kpi.ua">e.korotkiy@kpi.ua</a></p>
         <p>Тел 1: +3-8-067-695-2004 (Короткий Євген)</p>
         <p>Тел 2: +3-8-098-891-6340 (Федоренко Сергій)</p>
         <p>Тел 3: +3-8-098-765-1781 (Гордієнко Ярослав)</p>
