--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@ meta: One of the leading laboratories of the worldwide network of Fab Labs
         <p>Нд: вихідний</p>
         <h3>Контакти</h3><br>
         <p>E-mail: <a href="e.korotkiy@kpi.ua">e.korotkiy@kpi.ua</a></p>
-        <p>Тел 1: +3-8-067-695-2004 (Короткий Євген)</p>
-        <p>Тел 2: +3-8-098-891-6340 (Федоренко Сергій)</p>
-        <p>Тел 3: +3-8-098-765-1781 (Гордієнко Ярослав)</p>
-        <p>Тел 4: +3-8-098-334-4299 (Шут Олеся)</p>
+        <p>+3-8-067-695-2004 (Короткий Євген, засновник)</p>
+        <p>+3-8-098-891-6340 (Федоренко Сергій, лаборант)</p>
+        <p>+3-8-098-765-1781 (Гордієнко Ярослав, лаборант)</p>
+        <p>+3-8-098-334-4299 (Шут Олеся, лаборант)</p>
       </div> <!-- col -->
 
     </div> <!-- row -->
