--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@ meta: One of the leading laboratories of the worldwide network of Fab Labs
         <p>+3-8-098-891-6340 (Федоренко Сергій, лаборант)</p>
         <p>+3-8-098-765-1781 (Гордієнко Ярослав, лаборант)</p>
         <p>+3-8-098-334-4299 (Шут Олеся, лаборант)</p>
+        <p>За вказаними номерами можливий контакт в Telegram</p>
       </div> <!-- col -->
 
     </div> <!-- row -->
