--- a/calendar.html
+++ b/calendar.html
@@ -9,7 +9,7 @@ layout: default
 <section id="header-pages-blog">
   <div class="container" id="header-pages-blog-title">
 
-    <a href="about_us.html"> <h2 class="page-title">Calendar</h2> </a>
+    <h2 class="page-title">Календар</h2>
 
   </div>
 </section> <!-- hero -->
@@ -29,4 +29,6 @@ layout: default
 </section>
 
 <div class="container" id="separator"></div>
+
+{% include footer.html %}
 
