--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ meta: One of the leading laboratories of the worldwide network of Fab Labs
     <div class="row" id="map-info">
 
       <div class="col-md-6" id="map-container" >
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d981.1130044637364!2d30.456758630419365!3d50.44974981823893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4b57b04de630975!2sLampa!5e0!3m2!1sen!2sua!4v1545743026349" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d981.1130044637364!2d30.456758630419365!3d50.44974981823893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4b57b04de630975!2sLampa!5e0!3m2!1sen!2sua!4v1545743026349" width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div> <!-- col -->
 
       <div class="col-md-1"></div>
@@ -88,7 +88,7 @@ meta: One of the leading laboratories of the worldwide network of Fab Labs
         <p>E-mail: <a href="e.korotkiy@kpi.ua">e.korotkiy@kpi.ua</a></p>
         <p>Номери телефонів:</p>
         <ul>
-        <li>+3-8-067-695-2004 (Короткий Євген, засновник)</li>
+        <li>+3-8-067-695-2004 (Короткий Євген)</li>
         <li>+3-8-098-891-6340 (Федоренко Сергій)</li>
         <li>+3-8-098-765-1781 (Гордієнко Ярослав)</li>
         <li>+3-8-098-334-4299 (Шут Олеся)</li>
