--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@ meta: One of the leading laboratories of the worldwide network of Fab Labs
     <div class="row" id="map-info">
 
      <div class="col-md-5" id="contact-col-txt-2">
-        <h3>Адреса</h3><br>
+        <h3>Адреса</h3>
         <p>03056, м.Київ, проспект Перемоги, 37</p>
-        <p>Науково-технічна бібліотека КПІ, зал №1</p><br>
-        <h3>Розклад роботи</h3><br>
+        <p>Науково-технічна бібліотека КПІ, зал №1</p>
+        <h3>Розклад роботи</h3>
         <p>Пн-пт: з 16-30 до 20-00</p>
         <p>Сб: з 12-00 до 17-00</p>
-        <p>Нд: вихідний</p><br>
-        <h3>Контакти</h3><br>
+        <p>Нд: вихідний</p>
+        <h3>Контакти</h3>
         <p>E-mail: <a href="e.korotkiy@kpi.ua">e.korotkiy@kpi.ua</a></p>
         <p>Номери телефонів:</p>
         <ul>
@@ -91,7 +91,7 @@ meta: One of the leading laboratories of the worldwide network of Fab Labs
       <div class="col-md-1"></div>
 
       <div class="col-md-6" id="map-container" >
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d981.1130044637364!2d30.456758630419365!3d50.44974981823893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4b57b04de630975!2sLampa!5e0!3m2!1sen!2sua!4v1545743026349" width="550" height="700" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d981.1130044637364!2d30.456758630419365!3d50.44974981823893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4b57b04de630975!2sLampa!5e0!3m2!1sen!2sua!4v1545743026349" width="600" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div> <!-- col --> 
 
     </div> <!-- row -->
