--- a/about_us.html
+++ b/about_us.html
@@ -32,15 +32,12 @@ layout: default
   <br><br>
   <div class="row">
 
-    <div class="col-md-4 col-sm-4">
+    <div class="col-md-6 col-sm-6">
       <p>Лабораторія Лампа розташована в <a target="_blank" href="http://iaac.net/"><strong>Київському Політехнічному Інституті імені Ігоря Сікорського</strong></a> бла бла бла</p><br>
     </div> <!-- col -->
-    <div class="col-md-4 col-sm-4">
-      <p>Другий стовбчик</p><br>
-    </div> <!-- col -->
 
-    <div class="col-md-4 col-sm-4">
-      <img class="img-responsive" src="{{site.baseurl}}/img/about_us/about_us_main.jpg" height="330px">
+    <div class="col-md-6 col-sm-6">
+      <img class="img-responsive" src="{{site.baseurl}}/img/about_us/about_us_main.jpg">
     </div> <!-- col -->
   </div> <!-- row -->
 </div> <!-- container -->
@@ -81,9 +78,5 @@ layout: default
     </div> <!-- row -->
   </div> <!-- container -->
 </section> <!-- team -->
-
-
-<div class="container" id="separator"></div>
-
 
 {% include footer.html %}
