--- a/about_us.html
+++ b/about_us.html
@@ -79,4 +79,6 @@ layout: default
   </div> <!-- container -->
 </section> <!-- team -->
 
+<div class="container" id="separator"></div>
+
 {% include footer.html %}
