--- a/index.html
+++ b/index.html
@@ -99,4 +99,6 @@ meta: One of the leading laboratories of the worldwide network of Fab Labs
   </div>
 </section> <!--contact-->
 
+<div class="container" id="separator"></div>
+
 {% include footer.html %}
