--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,8 @@ layout: default
 
 {% include social.html %}
 
+<div class="container" id="separator"></div>
+
 <section id="contact">
 
   <div class="container">
@@ -54,5 +56,7 @@ layout: default
 
   </div>
 </section> <!--contact-->
+
+<div class="container" id="separator"></div>
 
 {% include footer.html %}
