--- a/about_us.html
+++ b/about_us.html
@@ -50,7 +50,7 @@ layout: default
     <div class="row">
 
       <div class="col-lg-12">
-        <h3>Команда Лампи</h3>
+        <h3>Команда</h3>
       </div>
       <!-- If you need to add or remove an employee, it is done in this repos _data/employees.yml file! -->
       <div class="text-center all-employees">
