--- a/about_us.html
+++ b/about_us.html
@@ -33,7 +33,7 @@ layout: default
   <div class="row">
 
     <div class="col-md-6 col-sm-6">
-      <p>Лабораторія Лампа розташована в <a target="_blank" href="http://iaac.net/"><strong>Київському Політехнічному Інституті імені Ігоря Сікорського</strong></a> бла бла бла</p><br>
+      <p>Ми — відкрита лабораторія створеня в <a target="_blank" href="https://kpi.ua/"><strong>Київському Політехнічному Інституті імені Ігоря Сікорського</strong></a> на базі кафедри <a target="_blank" href="http://keoa.kpi.ua/"><strong>Конструювання електронно-обчислювальної апаратури</strong></a></p><br>
     </div> <!-- col -->
 
     <div class="col-md-6 col-sm-6">
