--- a/equipment.html
+++ b/equipment.html
@@ -23,7 +23,7 @@ layout: default
 <section id="equipment">
   <div class="container">
 
-    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQj389hFrQqNoiFcye_htsn7x-PsGf7EKGRkCAmSXV-c6YcqnuqBoxaSu44KgxMgGWyuLO3PKMhH09M/pubhtml?widget=true&amp;headers=false"></iframe>
+    <iframe id="equipment-frame" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQj389hFrQqNoiFcye_htsn7x-PsGf7EKGRkCAmSXV-c6YcqnuqBoxaSu44KgxMgGWyuLO3PKMhH09M/pubhtml?widget=true&amp;headers=false" style="border: 0" width="1200" height="700" frameborder="0"></iframe>
 
   </div>
 </section>
