--- a/blog.html
+++ b/blog.html
@@ -62,7 +62,7 @@ layout: default
 
         <div class="well">
 
-          <h4>Теги</h4>
+          <h4>Теги:</h4>
           <div class="row">
             {% for c in site.categories %}
             <div class="col-lg-6">
