--- a/blog.html
+++ b/blog.html
@@ -62,7 +62,7 @@ layout: default
 
         <div class="well">
 
-          <h4>Теги:</h4>
+          <h4>Теги</h4>
           <div class="row">
             {% for c in site.categories %}
             <div class="col-lg-6">
@@ -78,7 +78,7 @@ layout: default
 
         <!-- Blog Social Well -->
         <div class="well">
-          <h4>Поділитися:</h4>
+          <h4>Поділитися</h4>
           <br>
           <span class='st_facebook_large' displayText='Facebook'></span>
           <span class='st_twitter_large' displayText='Tweet'></span>
