--- a/blog.html
+++ b/blog.html
@@ -67,7 +67,7 @@ layout: default
             {% for c in site.categories %}
             <div class="col-lg-6">
               <ul class="list-unstyled">
-                <li><a href="/tags#{{c | first}}">{{ c | first }}</a>
+                <li><a href="/tag/{{c | first}}">{{ c | first }}</a>
                 </li>
               </ul>
             </div>
