--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@ layout: default
     <section id="header-pages-blog">
 	    <div class="container" id="header-pages-blog-title">
             
-            <a href="projects.html"> <h2 class="page-title">Projects</h2> </a>                    
+            <a href="projects.html"> <h2 class="page-title">Проекти</h2> </a>                    
 							
 	    </div> <!-- container -->								        	        	                  	      	                     	            	            		                  			   		   	  		                                                                                          
     </section> <!-- hero -->
