--- a/projects.html
+++ b/projects.html
@@ -79,4 +79,8 @@ layout: default
     
 <!-- =============================================================================================================-->
 
+<div class="container" id="separator"></div>
+
+{% include footer.html %}
+
 
