--- a/education.html
+++ b/education.html
@@ -21,7 +21,7 @@ layout: default
 <section id="education">
   <div class="container">
 
-    {% include_relative education.md %}
+    {% include_relative education_content.md %}
 
   </div>
 </section>
