--- a/about_us.html
+++ b/about_us.html
@@ -32,8 +32,8 @@ layout: default
   <br><br>
   <div class="row">
 
-    <div class="col-md-6 col-sm-6">
-      <p>Ми — відкрита лабораторія створена в <a target="_blank" href="https://kpi.ua/"><strong>Київському Політехнічному Інституті імені Ігоря Сікорського</strong></a> на базі кафедри <a target="_blank" href="http://keoa.kpi.ua/"><strong>Конструювання електронно-обчислювальної апаратури</strong></a></p><br>
+    <div style="font-size: 0.9em;" class="col-md-6 col-sm-6">
+      <p>Ми — відкрита лабораторія створена у <a target="_blank" href="https://kpi.ua/"><strong>Київському Політехнічному Інституті імені Ігоря Сікорського</strong></a> на базі кафедри <a target="_blank" href="http://keoa.kpi.ua/"><strong>Конструювання електронно-обчислювальної апаратури</strong></a></p><br>
       <p>Відвідування лабораторії і користування обладнанням безкоштовне!</p><br>
       <p>Лабораторія працює в напрямках освіти і прототипування. На нашому обладнанні ви можете вивчати всі напрямки сучасної електроніки з використанням онлайн курсів та відео лекцій. Також ви маєте можливість користуватися приладами лаби для створення прототипів власних розробок.</p><br>
       <p>Щоб скористатися обладнанням — оберіть необхідні прилади зі списку, прийдіть в години роботи лабораторії та попросіть лаборанта надати вам необхідне обладнання. По завершенню роботи повертаєте прилади лаборантові. Просимо з розумінням поставитися, якщо лаборант попросить ваші контактні дані для звітності про відвідувачів.</p><br>
