--- a/about_us.html
+++ b/about_us.html
@@ -61,7 +61,7 @@ layout: default
         <div class="col-sm-6 col-md-4 col-lg-3 team-item">
           <img style="max-width:150px;" class="img-circle" src="{{ item.image }}" alt="">
           <h4> {{ item.name }} </h4>
-          <p>{{item.title}}</p>
+          <p style="font-size: 0.95em;">{{item.title}}</p>
 
           <div class="team-social">
             {% if item.fb %}
