--- a/index.html
+++ b/index.html
@@ -101,4 +101,40 @@ meta: One of the leading laboratories of the worldwide network of Fab Labs
 
 <div class="container" id="separator"></div>
 
+<section id="team">
+  <div class="container">
+    <div class="row">
+
+      <div class="col-lg-12">
+        <h3>Команда</h3>
+      </div>
+      <!-- If you need to add or remove an employee, it is done in this repos _data/employees.yml file! -->
+      <div class="text-center all-employees">
+        {% for item in site.data.employees %}
+        <div class="col-sm-6 col-md-4 col-lg-3 team-item">
+          <img style="max-width:150px;" class="img-circle" src="{{ item.image }}" alt="">
+          <h4> {{ item.name }} </h4>
+          <p style="font-size: 0.95em;">{{item.title}}</p>
+
+          <div class="team-social">
+            {% if item.fb %}
+            <a style="color:black; padding:7px;" target="_blank" href="{{item.fb}}"><i class="fa fa-facebook-square fa-lg"></i></a>
+            {% endif %}
+            {% if item.twitter %}
+            <a style="color:black; padding:7px;" target="_blank" href="{{item.twitter}}"><i class="fa fa-twitter fa fa-lg"></i></a>
+            {% endif %}
+            {% if item.linkedin %}
+            <a style="color:black; padding:7px;" target="_blank" href="{{item.linkedin}}"><i class="fa fa-linkedin-square fa-lg"></i></a>
+            {% endif %}
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+
+    </div> <!-- row -->
+  </div> <!-- container -->
+</section> <!-- team -->
+
+<div class="container" id="separator"></div>
+
 {% include footer.html %}
