--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@ layout: default
         <p>Сб: з 12-00 до 17-00</p>
         <p>Нд: вихідний</p>
         <h3>Контакти</h3>
-        <p>E-mail: <a href="mailto:e.korotkiy@kpi.ua">e.korotkiy@kpi.ua</a></p>
+        <p>E-mail: <a href="mailto:e.korotkiy [at] kpi.ua">e.korotkiy[at]kpi.ua</a></p>
         <p>Номери телефонів:</p>
         <ul>
         <li>+3-8-067-695-2004 (Короткий Євген)</li>
