--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ meta: One of the leading laboratories of the worldwide network of Fab Labs
         <p>Сб: з 12-00 до 17-00</p>
         <p>Нд: вихідний</p>
         <h3>Контакти</h3>
-        <p>E-mail: <a href="mailto:e.korotkiy@kpi.ua">e.korotkiy@kpi.ua</a></p>
+        <p>E-mail: <a href="mailto:e.korotkiy [at] kpi.ua">e.korotkiy[at]kpi.ua</a></p>
         <p>Номери телефонів:</p>
         <ul>
         <li>+3-8-067-695-2004 (Короткий Євген)</li>
