--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-meta: One of the leading laboratories of the worldwide network of Fab Labs
+meta: Лабораторія електроніки, з безкоштовним доступом. Наявні 3D принтери (3D printer), вимірювальне обладнання від Keysight, Tektronix, Rohde & Schwarz, плати з мікроконтролерами (STM32, ARM) і FPGA (Intel, Xilinx)
 ---
 
 <!-- ==== Navbar ==== -->
