--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-description: "Лабораторія електроніки, з безкоштовним доступом. Наявні 3D принтери, вимірювальне обладнання від Keysight, Tektronix, Rohde & Schwarz, плати з мікроконтролерами (STM32, ARM) і FPGA (Intel, Xilinx)"
+image: /img/hero_slider/a_slider_4.jpg
+description: "Лабораторія електроніки, з безкоштовним доступом. Наявні 3D принтери, вимірювальне обладнання від Keysight, Tektronix, Rohde & Schwarz, мікроконтролери (STM32, ARM) і FPGA (Intel, Xilinx)"
 ---
 
 <!-- ==== Navbar ==== -->
