--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+image: /img/projects/iota_hardware_accelerator/iota_hardware_accelerator.jpg
+description: "Проекти лабораторії Lampa"
 ---
 
 <header>
