--- a/gallery.html
+++ b/gallery.html
@@ -29,7 +29,7 @@ layout: default
           <div class="col-md-3 col-sm-4" id="main-menu-button">
             <div class="content-blocks-button">
 				    					                    
-              <a href="{{ photo.url }}"> <img src="{{ photo.thumb }}" alt="{{ photo.title }}"/></a> 
+              <a href="{{ photo.url }}"> <img src="{{ photo.thumb }}" class="image-fade" alt="{{ photo.title }}"/></a> 
 
             </div> 
           </div>	
