--- a/donate.html
+++ b/donate.html
@@ -33,15 +33,11 @@ description: "Підтримати лабораторію Lampa"
   <div class="row">
 
     <div style="font-size: 0.95em;" class="col-md-6 col-sm-6">
-      <p>Друзі, наш проект став можливим лише завдяки волонтерській праці. Залучення нового обладнання і меблів, організація заходів, створення нових відео і навчальних матеріалів, консультації відвідувачів, все це потребує величезної додаткової неоплачуваної роботи. Часто доводиться купувати за власний кошт витратні матеріали (припой, пластик для безкоштовного 3D друку і т.д.).</p><br>
-
-      <p>Якщо ви вважаєте, що ми робимо корисну справу і хочете нас підтримати, будемо дуже вдячні за допомогу!</p>
+      <p>Друзі, наш проект став можливим лише завдяки волонтерській праці. Залучення нового обладнання і меблів, організація заходів, створення нових відео і навчальних матеріалів, консультації відвідувачів, все це потребує величезної додаткової неоплачуваної роботи. Часто доводиться купувати за власний кошт витратні матеріали (припой, пластик для безкоштовного 3D друку і т.д.). Якщо ви вважаєте, що ми робимо корисну справу і хочете нас підтримати, будемо дуже вдячні за допомогу!</p><br>
 
       <p>Карта Приват Банк: 376287698726</p>
       <p>BTC: </p>
       <p>ETH: </p><br>
-
-      <p>Також нас можна підтримати підписавшись на наш <a target="_blank" href="https://www.youtube.com/user/kpikeoa"><strong>Ютуб канал</strong></a>. Там досить багато цікавих відео!</p><br>
 
       <p>Будемо дуже вдячні за допомогу в розвитку електронної інженерії і освіти в Україні!</p><br>
 
