--- a/donate.html
+++ b/donate.html
@@ -12,7 +12,7 @@ description: "Підтримати лабораторію Lampa"
 
 <section id="header-pages-blog">
   <div class="container" id="header-pages-blog-title">
-    <h2 class="page-title">Підтримати лабораторію Lampa</h2>
+    <h2 class="page-title">Підтримати нас</h2>
   </div> <!-- container -->
 </section> <!-- hero -->
 
@@ -28,18 +28,20 @@ description: "Підтримати лабораторію Lampa"
 
 <div class="container">
   <br>
-  <h3>Допомогти нам</h3>
+  <h3>Допомогти лабораторії Lampa</h3>
   <br><br>
   <div class="row">
 
     <div style="font-size: 0.95em;" class="col-md-6 col-sm-6">
-      <p>Друзі, наш проект став можливим лише завдяки волонтерській праці. Залучення нового обладнання і меблів, організація заходів, створення нових відео і навчальних матеріалів, консультації відвідувачів, все це потребує величезної додаткової неоплачуваної роботи. Часто доводиться купувати за власний кошт витратні матеріали (припой, пластик для безкоштовного 3D друку і т.д.). Якщо ви вважаєте, що ми робимо корисну справу і хочете нас підтримати, будемо дуже вдячні за допомогу!</p><br>
+      <p>Друзі, наш проект став можливим лише завдяки волонтерській праці. Залучення нового обладнання і меблів, організація заходів, створення нових відео і навчальних матеріалів, консультації відвідувачів, все це потребує величезної додаткової неоплачуваної роботи. Часто доводиться купувати за власний кошт витратні матеріали.</p> 
 
-      <p>Карта Приват Банк: 376287698726</p>
+      <p>Якщо ви вважаєте, що ми робимо корисну справу і хочете нас підтримати, будемо дуже вдячні за допомогу!</p><br>
+
+      <p>Приват24: 376287698726</p>
       <p>BTC: </p>
       <p>ETH: </p><br>
 
-      <p>Будемо дуже вдячні за допомогу в розвитку електронної інженерії і освіти в Україні!</p><br>
+      <p>Будемо дуже вдячні за допомогу в розвитку електронної інженерії та освіти в Україні!</p><br>
 
     </div> <!-- col -->
 
