--- a/donate.html
+++ b/donate.html
@@ -33,7 +33,9 @@ description: "Підтримати лабораторію Lampa"
   <div class="row">
 
     <div style="font-size: 0.95em;" class="col-md-6 col-sm-6">
-      <p>Друзі, наш проект став можливим лише завдяки волонтерській праці. Залучення нового обладнання і меблів, організація заходів, створення нових відео і навчальних матеріалів, консультації відвідувачів, все це потребує величезної додаткової неоплачуваної роботи. Часто доводиться купувати за власний кошт витратні матеріали.</p> 
+      <p>Друзі, цей проект став можливим лише завдяки волонтерській праці.</p><br> 
+
+      <p>Залучення нового обладнання, меблів, організація заходів, створення нових відео і навчальних матеріалів, консультації відвідувачів, все це потребує величезної додаткової неоплачуваної роботи. Часто доводиться купувати за власний кошт витратні матеріали.</p><br> 
 
       <p>Якщо ви вважаєте, що ми робимо корисну справу і хочете нас підтримати, будемо дуже вдячні за допомогу!</p><br>
 
