--- a/donate.html
+++ b/donate.html
@@ -28,7 +28,7 @@ description: "Підтримати лабораторію Lampa"
 
 <div class="container">
   <br>
-  <h3>Допомогти лабораторії Lampa</h3>
+  <h2>Допомогти лабораторії</h2>
   <br><br>
   <div class="row">
 
@@ -42,8 +42,6 @@ description: "Підтримати лабораторію Lampa"
       <p>Приват24: 376287698726</p>
       <p>BTC: </p>
       <p>ETH: </p><br>
-
-      <p>Будемо дуже вдячні за допомогу в розвитку електронної інженерії та освіти в Україні!</p><br>
 
     </div> <!-- col -->
 
