--- a/donate.html
+++ b/donate.html
@@ -28,8 +28,8 @@ description: "Підтримати лабораторію Lampa"
 
 <div class="container">
   <br>
-  <h2>Допомогти лабораторії</h2>
-  <br><br>
+  <h3>Допомогти лабораторії</h3>
+  <br>
   <div class="row">
 
     <div style="font-size: 0.95em;" class="col-md-6 col-sm-6">
@@ -41,7 +41,7 @@ description: "Підтримати лабораторію Lampa"
 
       <p>Приват24: 376287698726</p>
       <p>BTC: </p>
-      <p>ETH: </p><br>
+      <p>ETH: </p>
 
     </div> <!-- col -->
 
