--- a/donate.html
+++ b/donate.html
@@ -40,7 +40,7 @@ description: "Підтримати лабораторію Lampa"
 
       <p>Приват24: 376287698726</p>
       <p>BTC: </p>
-      <p>ETH: </p><br>
+      <p>ETH: </p>
 
     </div> <!-- col -->
 
