--- a/donate.html
+++ b/donate.html
@@ -38,9 +38,9 @@ description: "Підтримати лабораторію Lampa"
 
       <p>Якщо ви вважаєте, що ми робимо корисну справу і хочете нас підтримати, будемо дуже вдячні за допомогу!</p><br>
 
-      <p>Приват24: 5168 7573 1239 6858 (Короткий Євген)</p>
-      <p>BTC: 3AFYKErt3ASC4ieEgMp9qyAMDFhBt72Xiz</p>
-      <p>ETH: 0x3dc9218e83f7469a34136e2f4c57ee15fe8c5f11</p>
+      <p>Приват24: <strong>5168 7573 1239 6858</strong> (Короткий Євген)</p>
+      <p>BTC: <strong>3AFYKErt3ASC4ieEgMp9qyAMDFhBt72Xiz</strong></p>
+      <p>ETH: <strong>0x3dc9218e83f7469a34136e2f4c57ee15fe8c5f11</strong></p>
 
     </div> <!-- col -->
 
