--- a/donate.html
+++ b/donate.html
@@ -26,7 +26,7 @@ description: "Підтримати лабораторію Lampa"
 
 <div class="container" id="separator-blog"></div>
 
-<div class="container">
+<div class="container" id="project-body">
   <h2>Допомогти лабораторії</h2>
   <br>
   <div class="row">
@@ -38,9 +38,9 @@ description: "Підтримати лабораторію Lampa"
 
       <p>Якщо ви вважаєте, що ми робимо корисну справу і хочете нас підтримати, будемо дуже вдячні за допомогу!</p><br>
 
-      <p>Приват24: <strong>5168 7573 1239 6858</strong> (Короткий Євген)</p><br>
-      <p>BTC: <strong>3AFYKErt3ASC4ieEgMp9qyAMDFhBt72Xiz</strong></p><br>
-      <p>ETH: <strong>0x3dc9218e83f7469a34136e2f4c57ee15fe8c5f11</strong></p><br>
+      <p>Приват24: <strong>5168 7573 1239 6858</strong> (Короткий Євген)</p>
+      <p>BTC: <strong>3AFYKErt3ASC4ieEgMp9qyAMDFhBt72Xiz</strong></p>
+      <p>ETH: <strong>0x3dc9218e83f7469a34136e2f4c57ee15fe8c5f11</strong></p>
 
     </div> <!-- col -->
 
