--- a/donate.html
+++ b/donate.html
@@ -26,7 +26,7 @@ description: "Підтримати лабораторію Lampa"
 
 <div class="container" id="separator-blog"></div>
 
-<div class="container" id="project-body">
+<div class="container">
   <h2>Допомогти лабораторії</h2>
   <br>
   <div class="row">
