--- a/events.html
+++ b/events.html
@@ -9,7 +9,7 @@ layout: default
 
 <section id="header-pages-blog">
   <div class="container" id="header-pages-blog-title">
-            <h2 class="page-title">Workshops</h2>
+            <h2 class="page-title">Заходи</h2>
   </div>
 </section>
 
@@ -49,4 +49,8 @@ layout: default
     </div> <!-- row -->
   </div> <!-- container -->
 </section> <!-- workshops -->
+
+<div class="container" id="separator"></div>
+
+{% include footer.html %}
 
