--- a/events.html
+++ b/events.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+image: /img/events/microschool/micro1.jpg
+description: "Заходи лабораторії Lampa"
 ---
 
 <header>
@@ -21,12 +23,12 @@ layout: default
   <div class="container">
     <div class="row">
 
-      {% for post in site.posts limit: 50 %}
+      {% for post in site.posts %}
         {% if post.type == 'event' %}
 
         <div class="col-md-6">
 
-          <a href="{{site.baseurl}}{{post.url}}"><img src="{{site.baseurl}}/img/blog/{{post.teaserlatest}}" alt="event"/></a>
+          <a href="{{site.baseurl}}{{post.url}}"><img src="{{post.image}}" alt="event"/></a>
 
         </div>  <!-- col-->
 
@@ -34,7 +36,7 @@ layout: default
 
           <h3><a href="{{site.baseurl}}{{post.url}}">{{post.title}}</a></h3>
           <br>
-          <p>{{post.meta}}</p>
+          <p>{{post.description}}</p>
           <br>
           <a class="btn btn-default" id="event-join" href="{{site.baseurl}}{{post.url}}">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
 
@@ -53,4 +55,3 @@ layout: default
 <div class="container" id="separator"></div>
 
 {% include footer.html %}
-
