--- a/events.html
+++ b/events.html
@@ -38,7 +38,7 @@ description: "Заходи лабораторії Lampa"
           <br>
           <p>{{post.description}}</p>
           <br>
-          <a class="btn btn-default" id="event-join" href="{{site.baseurl}}{{post.url}}">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+          <a class="btn btn-default" id="event-join" href="{{site.baseurl}}{{post.url}}">Читати більше<span class="glyphicon glyphicon-chevron-right"></span></a>
 
         </div>  <!-- col-->
 
