--- a/events.html
+++ b/events.html
@@ -2,6 +2,7 @@
 layout: default
 image: /img/events/microschool/micro1.jpg
 description: "Заходи лабораторії Lampa"
+permalink: /events/
 ---
 
 <header>
