--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,7 @@
 layout: default
 image: /img/projects/iota_hardware_accelerator/iota_hardware_accelerator.jpg
 description: "Проекти лабораторії Lampa"
+permalink: /projects/
 ---
 
 <header>
