--- a/equipment.html
+++ b/equipment.html
@@ -2,6 +2,7 @@
 layout: default
 image: /img/hero_slider/a_slider_5.jpg
 description: "Обладнання лабораторії Lampa"
+permalink: /equipment/
 ---
 
 <header>
