--- a/events.html
+++ b/events.html
@@ -30,6 +30,7 @@ permalink: /events/
         <div class="col-md-6">
 
           <a href="{{site.baseurl}}{{post.url}}"><img src="{{post.image}}" alt="event"/></a>
+          <br>
 
         </div>  <!-- col-->
 
@@ -43,8 +44,7 @@ permalink: /events/
 
         </div>  <!-- col-->
 
-        <br>
-        <hr>
+        <div class="container" id="separator"></div>
 
         {% endif %}
       {% endfor %}
