Adding info about Vitaliy Biliy

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ description: "Лабораторія електроніки, з безкошто
         <h3>Адреса</h3>
         <p>03056, м.Київ, проспект Перемоги, 37</p>
         <p>Науково-технічна бібліотека КПІ, зал №1</p>
+        <p>Якщо ви не студент КПІ, візьміть будь ласка з собою документ, що посвідчує особу і містить вашу фотографію</p>
         <h3>Розклад роботи</h3>
         <p>Пн-пт: з 16-30 до 20-00</p>
         <p>Сб: з 12-00 до 17-00</p>
@@ -82,7 +83,7 @@ description: "Лабораторія електроніки, з безкошто
         <p>Номери телефонів:</p>
         <ul>
         <li>+3-8-067-695-2004 (Короткий Євген)</li>
-        <li>+3-8-098-891-6340 (Федоренко Сергій)</li>
+        <li>+3-8-095-751-4575 (Білий Віталій)</li>
         <li>+3-8-098-765-1781 (Гордієнко Ярослав)</li>
         <li>+3-8-098-334-4299 (Шут Олеся)</li>
         </ul>
