--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@ permalink: /contact/
         <li>+3-8-067-695-2004 (Короткий Євген)</li>
         <li>+3-8-095-751-4575 (Білий Віталій)</li>
         <li>+3-8-098-765-1781 (Гордієнко Ярослав)</li>
-        <li>+3-8-098-334-4299 (Шут Олеся)</li>
+        <li>+3-8-095-002-2831 (Ткачук Юрій)</li>
         </ul>
         <p>За номерами можливий контакт в Telegram</p>
       </div> <!-- col -->
