Changed team phones

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@ description: "Лабораторія електроніки, з безкошто
         <p>Номери телефонів:</p>
         <ul>
         <li>+3-8-067-695-2004 (Короткий Євген)</li>
-        <li>+3-8-095-751-4575 (Білий Віталій)</li>
-        <li>+3-8-098-765-1781 (Гордієнко Ярослав)</li>
-        <li>+3-8-095-002-2831 (Ткачук Юрій)</li>
+        <li>+3-8-093-657-0969 (Романенко Антон)</li>
+        <li>+3-8-098-765-1781 (Загреба Арсеній)</li>
+        <li>+3-8-095-002-2831 (Широков Владислав)</li>
         </ul>
         <p>За номерами можливий контакт в Telegram</p>
       </div> <!-- col -->
